z-index bugfix

--- a/apps/electron-frontend/src/styles/common.scss
+++ b/apps/electron-frontend/src/styles/common.scss
@@ -164,3 +164,8 @@
         }
     }
 }
+
+.ant-modal-root {
+    z-index: 15;
+    position: absolute;
+}
